--- a/fg/signifier.html
+++ b/fg/signifier.html
@@ -98,12 +98,13 @@
 
 <div class="font-previewer">
     <!-- <label for="text-preview">Type your text to preview the font:</label> -->
-    <input style="border:none; border-color: transparent;" type="text" id="text-preview" class="preview-text" placeholder="The quick brown fox jumps over the lazy dog.">
+    <!-- The quick brown fox jumps over the lazy dog. -->
+    <input style="border:none; border-color: transparent;" type="text" id="text-preview" class="preview-text" placeholder="Type to preview...">
 </div>
 
 <p style="border-left: 2px solid black; padding-left: 2vw; font-size: small;">
-    Söhne is the memory of Akzidenz-Grotesk framed through the reality of Helvetica. It captures the analogue materiality of “Standard Medium” used in Unimark’s legendary wayfinding system for the NYC Subway.
-<br>
+    Signifier is a Brutalist response to 17th century typefaces. Designed by Kris Sowersby, Signifier’s digital immateriality draws on a deeply material past. Acknowledging the processes and tools of digital form-making, Sowersby worked consciously with the computer to recast the lead, antimony, and tin of the 17th century Fell Types into ones and zeros. Signifier emerged from this alchemy with Bézier curves and sharp vectors determined by machine logic and a Brutalist ethos.
+    <br>
 </p>
 <a href="https://klim.co.nz/blog/soehne-design-information/">Read more...</a>
 </body>
