--- a/fg/sohne.html
+++ b/fg/sohne.html
@@ -93,7 +93,7 @@
 
 <div class="font-previewer">
     <!-- <label for="text-preview">Type your text to preview the font:</label> -->
-    <input style="border:none; border-color: transparent;" type="text" id="text-preview" class="preview-text" placeholder="The quick brown fox jumps over the lazy dog.">
+    <input style="border:none; border-color: transparent;" type="text" id="text-preview" class="preview-text" placeholder="Type to preview...">
 </div>
 
 <p style="border-left: 2px solid black; padding-left: 2vw; font-size: small;">
