--- a/me.html
+++ b/me.html
@@ -22,7 +22,6 @@
         width: 100%;
         overflow-x: auto;
         white-space: nowrap;
-        overflow: hidden; 
         overflow-y: hidden;
         }
 
@@ -42,20 +41,6 @@
             transition: 0.5s;
         }
 
-        .nic:hover{
-            /* color:red; */
-/* 
-            text-shadow:
-            0 0 7px #fff,
-            0 0 10px #fff,
-            0 0 21px #fff,
-            0 0 42px #fff,
-            0 0 82px #fff,
-            0 0 92px #fff,
-            0 0 102px #fff,
-            0 0 151px #fff,;
-            filter: dropshadow(color=#000000, offx=2, offy=2); */
-        }
 
         .menu li:last-child {
         margin-right: 0;
@@ -64,12 +49,15 @@
         @media (orientation: landscape) {
         .menu li {font-size: 5vw;margin-right: 3vw;}
         .nic {font-size: 30vh; margin-top: 27vh;}
+        .menu-container{
+        overflow: hidden; 
+        }
 
     }
 
     @media (orientation: portrait) {
         .menu li {font-size: 20vw;margin-right: 6vw;}
-        .nic {padding-top: 65vh; font-size: 30vw;}
+        .nic {padding-top: 50vh; font-size: 30vw;}
         .menu-container{
             padding-bottom: 1vh;
         }
@@ -89,7 +77,7 @@ window.onload = function() {
 </script>
 </head>
 <body>
-    <div class="menu-container" id="menu-container" onWheel= "this.scrollLeft+=event.deltaY>0?100:-100" >
+    <div class="menu-container" id="scrollable" onWheel= "this.scrollLeft+=event.deltaY>0?100:-100" >
         <ul class="menu">
           <li>Home</li>
           <li>About</li>
