--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
     
 <p><a href="https://xolyn.github.io/proj">projects></a><br>
     <a href="fg.html">font gallery></a><br>
-    <a href="https://aqmn.github.io/guess">fun></a><br>
-    <a href="https://aqmn.github.io">demo1></a><br>
+
+    <!-- <a href="https://aqmn.github.io/guess">fun></a><br> -->
+    <!-- <a href="https://aqmn.github.io">demo1></a><br>
     <a href="https://aqmn.github.io/index-code">demo2></a><br>
     <a href="https://aqmn.github.io/index0">demo3></a><br>
-    <a href="https://aqmn.github.io/comm2">demo4></a><br>
+    <a href="https://aqmn.github.io/comm2">demo4></a><br> -->
     <!-- <a class="" href="https://aqmn.github.io/cmd">demo5(beta)></a></p> -->
 
 </body>
@@ -75,9 +76,9 @@
     <div style="display: inline-block;">
      <a href="https://xolyn.github.io/give">$</a>/<a href="https://xolyn.github.io">home</a>/
     </div>
-    <div  style="display: inline-block;">
-        
-<!--         <b>EN</b>/CN/KR -->
+    <div  style="display: inline-block;">       
+        <!-- <b>EN</b>/CN/KR -->
+        <a style="text-decoration: none; " href="sm.html" aria-label="Eye of God">&#128065;</a>
     </div>
     </div>
     </footer>
