--- a/fg.html
+++ b/fg.html
@@ -11,6 +11,9 @@
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
   <style>
+
+@import url(https://db.onlinewebfonts.com/c/1058bc9f019dd38b7c08014b7d82b017?family=Sneak-Regular);
+
     @font-face {
       font-family: sig;
       src: url("fonts/sig.otf");
@@ -26,6 +29,9 @@
       src: url("fonts/aptos.ttf");
     }
 
+    a{
+      text-decoration: none;
+    }
     .disable-dbl-tap-zoom {
     touch-action: manipulation;
     }
@@ -149,9 +155,15 @@
       </a>
 
 
+        <a href="fg/sneak.html">
+          <div class="child">
+              <p style="font-size: 6vh; font-family: 'Sneak-Regular';">Sneak</p>
+          </div>
+        </a>
+
         <a href="#">
           <div class="child">
-              <p style="font-size: 6vh; ;">more to come...</p>
+              <p style="font-size: 6vh; font-family: ;">more to come...</p>
           </div>
         </a>
 
