--- a/fg.html
+++ b/fg.html
@@ -13,7 +13,7 @@
   <style>
 
 @import url(https://db.onlinewebfonts.com/c/1058bc9f019dd38b7c08014b7d82b017?family=Sneak-Regular);
-
+@import url(https://db.onlinewebfonts.com/c/88f10bf18a36407ef36bf30bc25a3618?family=SuisseIntl-Regular);
     @font-face {
       font-family: sig;
       src: url("fonts/sig.otf");
@@ -136,6 +136,7 @@
 
 <body class="disable-dbl-tap-zoom">
   <p style="font-size: 8vw; margin: 8vh 0 0; padding-left: 6vw; font-family: sig;">font gallery</p>
+  <a href="fg2.html">11</a>
   <div class="cover">
     <button style="z-index: 999999;" class="left" onclick="leftScroll()">
       <i class="fas fa-angle-double-left"></i>
@@ -163,7 +164,7 @@
 
         <a href="#">
           <div class="child">
-              <p style="font-size: 6vh; font-family: ;">more to come...</p>
+              <p style="font-size: 6vh; font-family: SuisseIntl-Regular;">Suissen Intl</p>
           </div>
         </a>
 
