--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body class="disable-dbl-tap-zoom">
-    <a href="simplefor.html"><p style="background: black; width: min-content;color: white; padding: 3px 6px 3px 6px;">Z</p></a>
+    <a href="simplefor.html"><p style="background: black; width: min-content;color: white; padding: 3px 6px 1px 5px;">Z</p></a>
 <!-- <a href="simple.html">Lingyu Zhou</a> -->
 <b>Lingyu Zhou</b>
 
@@ -60,8 +60,9 @@
     / <a href=https://weibo.com/u/5663761733>weibo</a>
 </p>
     
-<p><a href="https://xolyn.github.io/proj">projects></a><br>
-    <a href="fg.html">font gallery></a><br>
+<p><a href="proj.html">projects></a><br>
+    <a href="fg2.html">font gallery></a><br>
+    <a href="sm.html" title="Eye of God">site map></a>
 
     <!-- <a href="https://aqmn.github.io/guess">fun></a><br> -->
     <!-- <a href="https://aqmn.github.io">demo1></a><br>
@@ -78,7 +79,7 @@
     </div>
     <div  style="display: inline-block;">       
         <!-- <b>EN</b>/CN/KR -->
-        <a style="text-decoration: none; " href="sm.html" aria-label="Eye of God">&#128065;</a>
+        <!-- <a style="text-decoration: none; " href="sm.html" label="Eye of God">&#128065;</a> -->
     </div>
     </div>
     </footer>
