--- a/fg/signifier.html
+++ b/fg/signifier.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="logo.png" type="image/png">
     <style>
-        @font-face { font-family: sig; src: url("../fonts/sig.otf"); } 
         @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+        @import url(https://db.onlinewebfonts.com/c/1058bc9f019dd38b7c08014b7d82b017?family=Sneak-Regular);
+        @font-face { font-family: sig; src: url("../fonts/sig.otf"); } 
     body{
         text-align: left;
         margin-left: 10vw;
@@ -38,12 +38,8 @@
     color: black; 
     padding: 1em 0 3em 0; 
     font-family:"Courier Prime", monospace;
-    font-weight: bold;
     }
 
-    footer a{
-        /* text-decoration-style: dotted; */
-    }
 
     .font-previewer {
         display: flex;
