--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     / <a href=https://weibo.com/u/5663761733>weibo</a>
 </p>
 
-<pre id="myPre" style=" line-height: 0.8; letter-spacing: -2px; font-size: .1px;">
+<div id="myPre">
+<pre  style=" line-height: 0.8; letter-spacing: -2px; font-size: 1px;">
         __      ______      __                             
  ____  / /_  __/ ____ \____/ /_____________  ____ ___
 /_  / / / / / / / __ `/ __  / ___/ ___/ __ \/ __ `__ \
@@ -72,6 +73,7 @@
 /___/_/\__, /\ \__,_/\__,_/_(_) \___/\____/_/ /_/ /_/
       /____/  \____/                               
 </pre>
+</div>
 
 <p><a href="proj.html">projects></a><br>
     <a href="fg2.html">font gallery></a><br>
@@ -110,13 +112,13 @@ document.getElementById('emailLink').addEventListener('click', function(event) {
 </script>
 </body>
 <footer>
-    <div style="display: flex; justify-content: space-between; width: 80vw;  margin: 0 auto; padding: auto;">
-    <div style="display: inline-block;">
-     <a href="https://xolyn.github.io/give">$</a>/<a href="https://xolyn.github.io">home</a>/
-    </div>
-    <div  style="display: inline-block;">       
-        <!-- <b>EN</b>/CN/KR -->
-        <!-- <a style="text-decoration: none; " href="sm.html" label="Eye of God">&#128065;</a> -->
-    </div>
-    </div>
-    </footer>
+<div style="display: flex; justify-content: space-between; width: 80vw;  margin: 0 auto; padding: auto;">
+<div style="display: inline-block;">
+    <a href="https://xolyn.github.io/give">$</a>/<a href="https://xolyn.github.io">home</a>/
+</div>
+<div  style="display: inline-block;">       
+    <!-- <b>EN</b>/CN/KR -->
+    <!-- <a style="text-decoration: none; " href="sm.html" label="Eye of God">&#128065;</a> -->
+</div>
+</div>
+</footer>
