--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </p>
 
 <div id="myPre">
-<pre  style=" line-height: 0.8; letter-spacing: -2px; font-size: 1px;">
+<pre  style=" line-height: 0.8; font-size: xx-small;">
         __      ______      __                             
  ____  / /_  __/ ____ \____/ /_____________  ____ ___
 /_  / / / / / / / __ `/ __  / ___/ ___/ __ \/ __ `__ \
