--- a/fdd.html
+++ b/fdd.html
@@ -8,8 +8,9 @@
         @import url(https://db.onlinewebfonts.com/c/1058bc9f019dd38b7c08014b7d82b017?family=Sneak-Regular);
         @import url(https://db.onlinewebfonts.com/c/6e47ef470dd19698c911332a9b4d1cf4?family=Neue+Haas+Grotesk+Text+Pro);
         @import url(https://db.onlinewebfonts.com/c/031da03967812d134ed68febd3ba78a9?family=GT+America+Regular);
+        @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold);
         body{
-            padding: 30vh 10vw 20vh;
+            padding: 15vh 10vw 20vh;
             /* font-family: "Sneak-Regular"; */
             font-family: "Neue Haas Grotesk Text Pro";
             font-size: medium;
@@ -22,13 +23,14 @@
 </head>
 <body>
     <select name="font" id="font">
-        <option value="">--choose an font to preview--</option>
+        <option value="">--choose a font to preview--</option>
         <option value="Neue Haas Grotesk Text Pro">Neue Haas Grotesk</option>
         <option value="Sneak-Regular">Sneak</option>
         <option value="GT America Regular">GT America</option>
+        <option value="Diagramatika Text Bold">Diagramatika</option>
       </select>
     <!-- <div style="justify-content: space-between; display: flex;"><a href="">twitter</a> <a href="">instagram</a> <a href="">youtube</a> <a href="">email</a></div> -->
-    <p style="font-size: xx-large;">Lorem</p>
+    <p style="font-size: xx-large;">Lorem ipsum</p>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio nulla ullam reiciendis quia et laboriosam ad dolores. Earum ullam assumenda dolore eos sapiente sunt voluptatem officiis architecto cum quidem pariatur quisquam, consequatur eveniet illum inventore eum ex minus. Omnis quasi accusamus labore obcaecati, aspernatur illo ipsum, expedita, nobis delectus nulla voluptatibus distinctio at! Aspernatur nisi culpa necessitatibus sapiente eos consequatur nobis quod iste dolorem, corrupti et fugiat earum ea modi hic ipsum iusto perspiciatis nam possimus provident omnis amet atque explicabo? Iste error consequuntur fuga ipsum ratione repudiandae architecto laborum quaerat, est vel, eos et saepe excepturi beatae quas, quasi ducimus a magnam nostrum veniam aut accusamus similique esse. Voluptates tenetur, ex praesentium, eaque aut qui corrupti mollitia, ad incidunt beatae non. Libero hic quas a eum possimus dicta quae laboriosam quam labore aut modi animi tenetur perferendis, voluptatem amet vero quibusdam eligendi at repellendus? Eveniet nam, officia architecto, ex sed similique consectetur ipsum alias dicta, molestiae illum ratione. Fugiat explicabo quasi porro voluptatum quas inventore cupiditate corrupti, commodi eligendi repellendus maiores, unde tempore quisquam autem earum eos. Consequuntur aliquam numquam neque unde assumenda officia ad aliquid. Corporis repellat quas cum optio, exercitationem laboriosam placeat, quaerat perferendis consequuntur dolor ducimus, asperiores voluptatum. Ipsa cumque eligendi porro inventore, consectetur fugiat, enim quam architecto doloremque esse repellendus ullam maiores facere nulla iusto quae id officia omnis deserunt impedit provident aperiam, quia dolore! Molestiae facere nemo dicta itaque debitis iusto dolor praesentium similique ipsam qui voluptatem distinctio cumque tempora pariatur sint soluta inventore accusantium ab, consequatur odit perferendis? Excepturi, earum voluptatibus doloremque, neque atque corrupti nulla saepe molestias magni quis vitae veniam expedita, delectus ad dicta assumenda eaque ut itaque. Autem voluptatum omnis, maxime veniam officiis vel harum voluptates odit qui aperiam ducimus velit saepe itaque minus, inventore cum id asperiores tempora. Beatae temporibus dolorem facere, non saepe at eveniet dolorum, architecto mollitia eum ab delectus cum. Expedita in doloribus libero voluptates aspernatur labore iusto nihil ratione, deleniti odio fugiat neque corporis explicabo aperiam quas maiores repellat officia. Reiciendis praesentium eligendi dignissimos nisi veritatis fuga ipsum, aut esse voluptate optio? Necessitatibus eos itaque officia harum esse totam saepe. Blanditiis fuga repudiandae distinctio excepturi, necessitatibus iusto repellendus neque libero maxime ea illo beatae optio placeat eius enim ipsum iure! Ullam, alias unde quod vero possimus, facere commodi aperiam, asperiores ducimus rerum voluptas culpa! Saepe itaque architecto natus autem nemo veniam pariatur iusto explicabo et repudiandae? Ex est suscipit quaerat corporis praesentium, error quibusdam possimus totam ab aspernatur voluptatum. Eum deserunt nam tenetur dicta ullam obcaecati provident pariatur exercitationem molestias, ipsam, reiciendis sint excepturi. Atque adipisci quo consequuntur soluta est aliquid harum sint iusto molestiae quibusdam eum laudantium deserunt placeat ipsum velit nesciunt culpa nostrum doloribus saepe provident enim animi, eveniet vel alias? Provident cupiditate dolores blanditiis a beatae laboriosam nulla quidem eius harum nam? Pariatur accusantium maiores nemo repellat officiis earum nihil? Ratione cumque explicabo libero maiores sed et enim facilis facere mollitia! Nam natus ipsum culpa tenetur quia, voluptatem ullam totam ratione ipsam?
     <br><p style="text-align: center;"><a style="color:inherit " href="javascript:scroll(0,0)">&uarr; TOP</a></p>
 </body>
