--- a/me.html
+++ b/me.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>me</title>
+    <link rel="icon" href="https://f.xoy.one/assets/logo.png" type="image/png">
+    <title>lingyu zhou</title>
     <style>
+    @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold);
+
     @font-face {
       font-family: neue;
       src: url("fonts/nhm.ttf");
@@ -20,7 +23,8 @@
             background-color:black;
             color:white;
             margin:0px;
-            font-family: neue;
+            /* font-family: neue; */
+            font-family: "Diagramatika Text Bold";
             overflow-y: hidden;
         }
 
