--- a/proj.html
+++ b/proj.html
@@ -151,6 +151,7 @@
             <details open>
                 <summary >List of work</summary>
                 <ul style=" margin-top: 5px;">
+                    <li><a href="me.html">demo0</a><br></li>
                     <li><a href="https://aqmn.github.io">demo1</a><br></li>
                     <li><a href="https://aqmn.github.io/index-code">demo2</a><br></li>
                     <li><a href="https://aqmn.github.io/index0">demo3</a><br></li>
