--- a/oly.html
+++ b/oly.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        @font-face {
-      font-family: neue;
-      src: url("fonts/nhm.ttf");
-    }
-
+    @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold);
+    @import url(https://db.onlinewebfonts.com/c/3c76d979e72206bc554a1863d96ac5d4?family=Neue+Haas+Grotesk+Text+Pro);
     body{
         margin: 0px;
         background-color: black;
         transition: 0.5s;
+        /* font-family: "Neue Haas Grotesk Text Pro"; */
+        font-family: "Diagramatika Text Bold";
+
     }
 
     .desc{
         padding: 3vh 10vw 3vh;
         color:white;
-        font-family: neue;
         line-height:.85;
+        letter-spacing: -3px;
     }
 
     .desc a{
@@ -55,8 +55,9 @@
 </head>
 <body>
     <div style="padding-top: 20vh;"></div>
-    <div class="desc">The<br>Bla<span style=" display: inline-block; transform:  scaleX(-1);">c</span>k<br>Record</div>
-    <!-- <div class="desc"><span style="color:orangered">A</span>rt<br><span style="color:orangered">O</span>f<br><span style="color:orangered">F</span>onts</div> -->
-    <div class="desc"><a href="#">Details</a><br><a href="#">Enroll</a></div>
+    <!-- <div class="desc">The<br>Bla<span style=" display: inline-block; transform:  scaleX(-1); background-color: white; color:black">c</span>k<br>Record</div> -->
+    <div class="desc">EDDY<br>MUSiC<br>LABEL</div>
+    <div style="font-size: x-large; padding: 3vh 10vw 3vh; color:white;">By <a style="color:white;" href="https://khentmt.com">KH Entertainment</a></div>
+    <div class="desc"><a href="#">About</a><br><a href="#">Details</a><br><a href="#">Enroll</a></div>
 </body>
 </html>
